# Squads-Genius

./: .gitignore  AUTHORS  AUTHORS.md  CLAUDE.md  CONFORMANCE.md  NOTICE.md  README.md  SELECTED_SQUADS_MANIFEST.json  SQUAD_INDEX.md  squad.yaml
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/: AGENTS.md  AUTHORS.md  LOOP.md  NOTICE.md  PRD.md  README.md  pyproject.toml  requirements.txt  squad.yaml
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/agents/: bumblebee.md  grapple.md  hoist.md  hound.md  ironhide.md  kup.md  optimus.md  perceptor.md  prowl.md  ratchet.md  red-alert.md  wheeljack.md
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/docs/: limitacoes.md  manual_operacional.md
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/schemas/: agent.schema.json  quality_report.schema.json  sacp_contract.schema.json  task.schema.json
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/scripts/: forge_common.py  validate_squad.py
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/tasks/: 01_noesis_intake.yaml  02_boule_estrategia.yaml  03_diairesis_decomposicao.yaml  05_perceptor_avaliacao.yaml  07_praxis_geracao.yaml  08_elenchos_verificacao.yaml  10_anamnesis_consolidacao.yaml
squads/construção-de-squads-e-sistemas-de-ia/forge-of-solus-prime/tests/: test_forge.py
squads/instituto-federal-farroupilha-iffar/argos-squad/: .gitignore  AUTHORS.md  LICENSE  NOTICE.md  PRD.md  README.md  SKILL.md  model_profile.yaml  pyproject.toml  quality_report.json  squad.yaml
(+3834 files in other folders)
